--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,21 @@
-@import "tailwindcss";
+/* @import url(https://db.onlinewebfonts.com/c/8d2373f2d09f18f8df02fc2b96e27f23?family=Test+Calibre); */
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Test Calibre", sans-serif;
+  font-weight: 900;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+p {
+  font-family: "inter", sans-serif;
 }
