--- a/components/productCycle/styles.module.css
+++ b/components/productCycle/styles.module.css
@@ -115,3 +115,90 @@
   top: 45%;
   right: 83%;
 }
+
+.mobileDownArrow {
+  display: none;
+}
+
+.stepSvg,
+.stepSvgTwo {
+  display: block;
+}
+
+@media (max-width: 768px) {
+  .container {
+    padding: 45px 16px;
+  }
+  .contain {
+    max-width: 100%;
+    padding: 20px 0px;
+  }
+  .stepSvg {
+    position: absolute;
+    top: 13.5%;
+    right: 45%;
+    transform: rotate(90deg);
+  }
+
+  .stepSvgTwo {
+    top: 83.5%;
+    right: 45%;
+    transform: rotate(90deg);
+  }
+
+  .titleBadge {
+    top: -22px;
+    width: 300px;
+    padding: 12px;
+    justify-content: center;
+  }
+
+  .titleBadge h2 {
+    font-size: 14px;
+  }
+
+  .contentCard {
+    display: flex;
+    flex-direction: column;
+    gap: 28px;
+  }
+
+  .step {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+    background: transparent;
+    padding: 20px 0;
+  }
+
+  .step:first-child {
+    border-top-left-radius: 24px;
+    border-bottom-left-radius: 0px;
+    border-top-right-radius: 24px;
+    border-bottom-right-radius: 0px;
+  }
+
+  .step:last-child {
+    background: #cbcffb;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-top-right-radius: 0px;
+    padding-top: 34px;
+    border-top-right-radius: 0px;
+  }
+
+  .step > p {
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 700;
+    color: #0a0b1e;
+    margin-top: 6px;
+  }
+  .innerContainer {
+    padding: 36px 16px 32px;
+  }
+  .glowBorder {
+    padding: 4px;
+  }
+}
