--- a/components/founderHero/styles.module.css
+++ b/components/founderHero/styles.module.css
@@ -136,3 +136,34 @@
   width: 100%;
   height: 100%;
 }
+
+@media (max-width: 768px) {
+  .container {
+    padding: 24px 16px;
+  }
+  .contain {
+    max-width: unset;
+  }
+  .heroTexts {
+    width: 100%;
+  }
+  .heroTexts h1 {
+    font-size: 40px;
+    line-height: 52px;
+  }
+  .heroTexts > p {
+    width: unset;
+    font-size: 16px;
+  }
+  .ctaButton {
+    flex-direction: column;
+  }
+  .ctaOne,
+  .ctaTwo {
+    justify-content: center;
+  }
+  .imageContainer {
+    max-width: 100%;
+    margin-top: 30px;
+  }
+}
