--- a/components/leadingAgencies/styles.module.css
+++ b/components/leadingAgencies/styles.module.css
@@ -6,6 +6,16 @@
   background-repeat: no-repeat;
   overflow: hidden;
 }
+.contain h6 {
+  color: #393b5f;
+  font-weight: 900;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 8%;
+  margin-bottom: 16px;
+  text-align: center;
+  text-transform: uppercase;
+}
 
 .marquee {
   width: 85%;
@@ -31,17 +41,15 @@
   transform: scale(1.05);
 }
 
-@media (max-width: 768px) {
-  .track {
-    animation: scroll 20s linear infinite;
-  }
+.track {
+  animation: scroll 20s linear infinite;
+}
 
-  @keyframes scroll {
-    0% {
-      transform: translateX(0);
-    }
-    100% {
-      transform: translateX(-50%);
-    }
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
   }
 }
