--- a/components/agenciesHero/styles.module.css
+++ b/components/agenciesHero/styles.module.css
@@ -78,6 +78,7 @@
 .ctaButton {
   display: flex;
   gap: 16px;
+  padding-top: 24px;
   justify-content: flex-start;
 }
 
@@ -114,12 +115,12 @@
 
 .imageContain img {
   width: 100%;
-  height: auto;
+  height: 500px;
 }
 
 @media (max-width: 768px) {
   .container {
-    padding: 16px 24px 54px 16px;
+    padding: 16px 24px 56px 16px;
   }
   .contain {
     max-width: unset;
@@ -127,6 +128,11 @@
   }
   .textContain {
     width: 100%;
+  }
+
+  .imageContain img {
+    width: 100%;
+    height: auto;
   }
   .textContain h1 {
     max-width: unset;
