--- a/components/productCycle/styles.module.css
+++ b/components/productCycle/styles.module.css
@@ -61,10 +61,15 @@
 
 .contentCard {
   background: #eef0fe;
+  max-width: 100%;
+  overflow-x: hidden;
   border-radius: 20px;
   display: grid;
-  grid-template-columns: 2fr 2fr 2fr 2fr 2fr 2fr 2fr;
-  gap: 24px;
+  grid-template-columns: repeat(7, 1fr);
+}
+
+.contentCard * {
+  min-width: 0;
 }
 
 .journeySteps {
@@ -107,13 +112,13 @@
 .stepSvg {
   position: absolute;
   top: 45%;
-  right: 13%;
+  right: 14%;
 }
 
 .stepSvgTwo {
   position: absolute;
   top: 45%;
-  right: 83%;
+  right: 81.5%;
 }
 
 .mobileDownArrow {
@@ -123,6 +128,12 @@
 .stepSvg,
 .stepSvgTwo {
   display: block;
+}
+
+@media (max-width: 1280px) {
+  .stepSvgTwo {
+    right: 80%;
+  }
 }
 
 @media (max-width: 768px) {
@@ -136,13 +147,13 @@
   .stepSvg {
     position: absolute;
     top: 13.5%;
-    right: 45%;
+    right: 42.5%;
     transform: rotate(90deg);
   }
 
   .stepSvgTwo {
     top: 83.5%;
-    right: 45%;
+    right: 42.5%;
     transform: rotate(90deg);
   }
 
