--- a/components/footer/styles.module.css
+++ b/components/footer/styles.module.css
@@ -22,12 +22,20 @@
   gap: 24px;
 }
 
-.links > p {
+.links > a {
+  font-family: "inter", sans-serif;
+  text-decoration: none;
   color: #ffffff;
   font-size: 18px;
   line-height: 24px;
   cursor: pointer;
 }
+
+.links > a:hover {
+  color: #a6abe8;
+  transition: all 0.5s ease;
+}
+
 .socials {
   display: flex;
   gap: 24px;
